tests/compile_fail/derive_column_named_fields.rs
use balsaq::Column;

#[derive(Column)]
pub struct Foo {
    pub x: i64,
}

fn main() {}
